src/App.css
/* ... */
.column-dropdown > div {
  column-count: 2;
  inset: auto !important;
  column-rule: 1px solid var(--bs-border-color);
}

/** Dashboard */
#dv-dashboard {

  & div[ref]::-webkit-scrollbar {
    display: none;
  }

  .row:first-child {
    background-color: rgba(var(--bs-light-rgb), var(--bs-bg-opacity)) !important;
  }

  .card {
    .card-header {
      padding: 0.25rem;
    }

    .card-header .bi-grip-vertical {
      cursor: move;
    }

    .card-header .bi-grip-vertical:active {
      cursor: grabbing;
    }

    .card-header .dashboard-title-input {
      padding: 0.1rem;
      margin: -0.1rem;
    }

    .card-header > div {
      font-size: small !important;
    }

    .card-body {
      aspect-ratio: 1.75;
      overflow-y: auto;
    }

    .card-body .list-group.list-group-flush {
      margin: -1rem;
    }

    .list-group.list-group-flush li {
      background: transparent;
      padding: 0.25rem 0.5rem;
    }

    .leaflet-control-attribution {
      zoom: 0.85;
      display: none;
    }

    .leaflet-bar,
    .leaflet-control-layers {
      border-radius: var(--bs-border-radius);
    }

    .leaflet-touch .leaflet-control-layers,
    .leaflet-touch .leaflet-bar {
      border: 1px solid rgba(0, 0, 0, 0.2);
    }

    .leaflet-touch .leaflet-bar a:first-child,
    .leaflet-touch .leaflet-bar a:last-child {
      border-radius: var(--bs-border-radius);
    }

    .card-body::-webkit-scrollbar-corner {
      width: 1.25rem;
    }

    .card-body > textarea {
      border: 0px;
      resize: none;
      width: 100%;
      height: 100%;
      background: none;
    }

    & > .bi {
      position: absolute;
      right: 3em;
      top: 0.675em;
      width: 0.2rem;
      height: 0.2rem;
      font-size: small;
      cursor: pointer;
      opacity: 0.6;
    }

    & > .bi:hover {
      opacity: 1;
    }

    .dropdown button {
      border: none;
    }

    .card-body textarea:focus {
      outline: none;
    }

    .card-body > .form-text {
      padding-right: 0.5rem !important;
      padding-left: 0.5rem !important;
    }
  }

  .sortable-ghost {
    opacity: 0.25;
    filter: grayscale(1) blur(1.5px);
  }
}

/** Sidebar */
#dv-sidebar {
  width: 300px; /* Width of the Sidebar */
  background-color: rgba(var(--bs-light-rgb), var(--bs-bg-opacity)) !important;
  & div:not(#dv-tab-nav) .btn-toolbar .btn {
    border: none;
    border-radius: 0%;
  }
  .sortable-ghost {
    opacity: 0.25;
    filter: grayscale(1) blur(1.5px);
  }
  & li i.bi-square-fill {
    cursor: ns-resize;
  }
  & li.sortable-chosen i.bi-square-fill {
    cursor: grabbing;
  }

  & .list-group-item {
    background-color: transparent !important;
    &:hover {
      background-color: var(--bs-list-group-bg) !important;
    }
    &:has(div.d-block),
    &:has(select.d-block) {
      background-color: var(--bs-list-group-bg) !important;
    }
  }

  & .footer-memory {
    font-size: 0.5rem;
    line-height: 0.5rem;
    width: 1rem;
    padding: 0 0 0 0.2rem;
  }
}

/** Documentation */
#dv-docs {
  display: grid;
  grid-area: main;

  overflow: auto;
  height: 100vh;

  @media (min-width: 768px) {
    grid-template-areas:
      "intro"
      "toc"
      "content";
    grid-template-rows: auto auto 1fr;
    gap: inherit;
    & .toc {
      display: none;
    }
  }

  @media (min-width: 992px) {
    grid-template-areas:
      "intro toc"
      "content toc";
    grid-template-rows: auto 1fr;
    grid-template-columns: 4fr 1fr;
    & .toc {
      display: block;
    }
  }

  & .intro {
    grid-area: intro;
  }

  #dv-docs-content {
    grid-area: content;
  }

  .toc {
    grid-area: toc;
    position: sticky;
    top: 0rem;
    right: 0;
    z-index: 2;
    height: 100vh;
    overflow-y: auto;

    border-left: 1px solid var(--bs-border-color);
    margin-left: 0.5rem;
    padding: 2.5rem 0rem 2.5rem 0.5rem;

    & ol {
      list-style: none;
      padding: 0.2rem 0.5rem;
    }
    & ol a {
      text-decoration: none;
      color: var(--bs-text-dark);
    }
    & ol a:hover {
      text-decoration: underline;
    }
    & ol ol {
      padding: 0.2rem 0.75rem;
    }
    & .toc-item {
      font-size: 0.85rem;
    }
    & .toc-link-h1 {
      font-size: 1rem;
      font-weight: bold;
      color: var(--bs-secondary-color);
    }
    & > ol:before {
      content: "On this page";
      font-size: 1.1rem;
      font-weight: bold;
      border-bottom: 2px solid var(--bs-border-color);
      display: inline-block;
      width: 100%;
      margin-bottom: 0.5rem;
    }
  }
  & section {
    margin-bottom: 3rem;
  }
  & a.active {
    border-left: 3px solid var(--bs-primary);
    padding-left: 5px;
    margin-left: -8px;
  }
}

.toc-item-h1:nth-child(n + 2) {
  margin-top: 0.75rem;
}

.table-w-fit {
  width: fit-content;
}

.scrollup {
  position: absolute !important;
  bottom: 1rem;
  right: 3rem;
  z-index: 3;
}

/** Plotly */
.plotly .modebar {
  right: 1.25rem !important;
}

/** Main Container */
#dv-main:has(#dv-dashboard) {
  background: radial-gradient(
    farthest-corner at 100% 100%,
    rgba(0, 0, 0, 0.25) 10%,
    transparent 80%
  ), var(--bs-secondary-bg-subtle);
}

body[data-bs-theme="dark"] #dv-main:has(#dv-dashboard) {
  background: radial-gradient(
    farthest-corner at 100% 100%,
    rgba(255, 255, 255, 0.25) 10%,
    transparent 80%
  ), var(--bs-secondary-bg-subtle);
}

/** Map Darkmode */
body[data-bs-theme="dark"] {
  #dv-sidebar {
    background-color: rgba(var(--bs-dark-rgb), var(--bs-bg-opacity)) !important;
  }
  #dv-dashboard .row:first-child {
    background-color: rgba(var(--bs-dark-rgb), var(--bs-bg-opacity)) !important;
  }
}
/* ... */

